tests/fail/ch_nightly/input_not_str.stderr
error[E0277]: the trait bound `usize: AsRef<str>` is not satisfied
 --> tests/fail/ch_nightly/input_not_str.rs:2:20
  |
2 |     sscanf::scanf!(5usize, "{}", usize);
  |     ---------------^^^^^^--------------
  |     |              |
  |     |              the trait `AsRef<str>` is not implemented for `usize`
  |     required by a bound introduced by this call

error[E0277]: the trait bound `[u8; 1]: AsRef<str>` is not satisfied
 --> tests/fail/ch_nightly/input_not_str.rs:3:20
  |
3 |     sscanf::scanf!(b"5", "{}", usize);
  |     ---------------^^^^--------------
  |     |              |
  |     |              the trait `AsRef<str>` is not implemented for `[u8; 1]`
  |     required by a bound introduced by this call
  |
  = help: the following other types implement trait `AsRef<T>`:
            [T; N]
            [T]
  = note: required because of the requirements on the impl of `AsRef<str>` for `&[u8; 1]`
